--- a/index.html
+++ b/index.html
@@ -3,55 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video per Bambini</title>
+    <title>Avventura Galattica</title>
     <style>
+        /* Imposta lo sfondo spaziale e lo stile generale */
         body {
             margin: 0;
             padding: 0;
             font-family: 'Comic Sans MS', cursive, sans-serif;
-            background: linear-gradient(to bottom, #a3d8f4, #fdf1ba);
+            background: url('https://images.unsplash.com/photo-1518780664697-55e3ad937233?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
+            background-size: cover;
+            color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
-        .video-container {
+
+        .container {
             text-align: center;
+            background: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            background: #fff;
             border-radius: 15px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-            max-width: 400px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
+            max-width: 600px;
             width: 100%;
         }
-        .video-container h1 {
-            font-size: 2rem;
-            color: #f48c06;
+
+        h1 {
+            font-size: 2.5rem;
             margin-bottom: 20px;
-            text-shadow: 2px 2px #ffa69e;
+            color: #f4d03f;
+            text-shadow: 2px 2px #1abc9c;
         }
+
         .video-box {
-            border: 5px solid #ffcc29;
+            border: 5px solid #f4d03f;
             border-radius: 10px;
             padding: 10px;
-            background: #fff3cd;
+            background: #1abc9c;
         }
-        video {
+
+        iframe {
             width: 100%;
-            height: auto;
+            height: 315px;
             border-radius: 10px;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: #f4f4f4;
+        }
+
+        .stars {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif') repeat;
+            background-size: cover;
+            z-index: -1;
         }
     </style>
 </head>
 <body>
-    <div class="video-container">
-        <h1>Guarda il Video!</h1>
+    <div class="stars"></div>
+    <div class="container">
+        <h1>Avventura Galattica!</h1>
+        <p>Segui il nostro piccolo alieno mentre attraversa la Via Lattea per visitare il nostro pianeta!</p>
         <div class="video-box">
-            <!-- Sostituisci "video.mp4" con il percorso del tuo video -->
-            <video controls>
-                <source src="video.mp4" type="video/mp4">
-                Il tuo browser non supporta il video.
-            </video>
+            <!-- Video YouTube incorporato -->
+            <iframe 
+                src="https://www.youtube.com/embed/gKQYsjr4fis" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
         </div>
     </div>
 </body>
