--- a/index.html
+++ b/index.html
@@ -5,39 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avventura Galattica</title>
     <style>
-        /* Imposta lo sfondo spaziale e lo stile generale */
+        /* Imposta lo sfondo spaziale animato */
         body {
             margin: 0;
             padding: 0;
             font-family: 'Comic Sans MS', cursive, sans-serif;
-            background: url('https://images.unsplash.com/photo-1518780664697-55e3ad937233?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
-            background-size: cover;
+            background: linear-gradient(to bottom, #000428, #004e92);
             color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
         }
 
         .container {
             text-align: center;
-            background: rgba(0, 0, 0, 0.7);
-            padding: 20px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5);
-            max-width: 600px;
-            width: 100%;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            max-width: 700px;
+            width: 90%;
+            position: relative;
+            z-index: 10;
         }
 
         h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
-            color: #f4d03f;
-            text-shadow: 2px 2px #1abc9c;
+            color: #ffd700;
+            text-shadow: 2px 2px 10px #1abc9c;
+        }
+
+        p {
+            font-size: 1.2rem;
+            color: #f4f4f4;
+            margin-bottom: 20px;
         }
 
         .video-box {
-            border: 5px solid #f4d03f;
+            border: 5px solid #ffd700;
             border-radius: 10px;
             padding: 10px;
             background: #1abc9c;
@@ -45,29 +53,59 @@
 
         iframe {
             width: 100%;
-            height: 315px;
+            height: 350px;
             border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
-        p {
-            font-size: 1.2rem;
-            color: #f4f4f4;
-        }
-
+        /* Stelle animate */
         .stars {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            z-index: 1;
             background: url('https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif') repeat;
             background-size: cover;
-            z-index: -1;
+            opacity: 0.8;
+            animation: moveStars 20s linear infinite;
+        }
+
+        @keyframes moveStars {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(-1000px); }
+        }
+
+        /* Pianeti */
+        .planet {
+            position: absolute;
+            border-radius: 50%;
+            background: linear-gradient(145deg, #e74c3c, #c0392b);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+
+        .planet-1 {
+            width: 80px;
+            height: 80px;
+            top: 10%;
+            left: 20%;
+        }
+
+        .planet-2 {
+            width: 100px;
+            height: 100px;
+            bottom: 15%;
+            right: 25%;
+            background: linear-gradient(145deg, #9b59b6, #8e44ad);
         }
     </style>
 </head>
 <body>
     <div class="stars"></div>
+    <div class="planet planet-1"></div>
+    <div class="planet planet-2"></div>
+
     <div class="container">
         <h1>Avventura Galattica!</h1>
         <p>Segui il nostro piccolo alieno mentre attraversa la Via Lattea per visitare il nostro pianeta!</p>
